fix: fix table header align center

--- a/packages/theme-chalk/src/table/table.less
+++ b/packages/theme-chalk/src/table/table.less
@@ -595,8 +595,8 @@
     max-width: 100%;
 
     &-inner {
-      display: inline-flex;
-      flex-grow: 1;
+      display: flex;
+      flex: 1;
       overflow: hidden;
       overflow-wrap: break-word;
       white-space: nowrap;
